# LazyKamuiCodeSkillsCreator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/skills/file-upload-kamui-fal/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-aura-sr/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-chrono-edit/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-crystal-upscaler/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-dreamomni2-edit/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-easel-ai-fashion-size-estimator/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-emu-3-5-image-edit/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-chrono-edit-lora/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-chrono-edit-lora-gallery-paintbrush/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-chrono-edit-lora-gallery-upscaler/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-flux-2-lora-gallery-apartment-staging/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-gemini-3-pro-image-preview-edit/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-gpt-image-1-5-edit/: SKILL.md  queue_config.json
.claude/skills/i2i-kamui-fal-longcat-image-edit/: SKILL.md  queue_config.json
.github/workflows/: release.yml
docs/: env-placeholder.md  lazy-mode.md  output-path-strategy.md  queue_system_design.md  queue_system_hardening.md  release-process.md  wsl2-agent-teams-setup.md
release/claude/: MANIFEST.in  pyproject.toml
release/claude/lazykamui/: __init__.py  __main__.py  cli.py
(+301 files in other folders)
